--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <form>
+            <form action="https://formspree.io/f/xjvqgnyk" method="post">
               <div class="mb-3">
                 <input
                   type="text"
